# RenderingEngine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  test_runner
.cmake/api/v1/reply/: cache-v2-86b54cc08df9ce87de2f.json  cmakeFiles-v1-07b8d4e48abb467e2e33.json  codemodel-v2-afa851e84aeeeac20847.json  index-2024-12-26T21-57-30-0523.json  target-RenderingEngine-Debug-2b84e00226f8dad7f6ee.json  target-test_runner-Debug-412fdbc1e3535780e63d.json
Testing/Temporary/: CTestCostData.txt
engine/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  RenderingEngine  cmake_install.cmake  main.cpp
engine/include/: bounds2.h  bounds3.h  canvas.h  medium.h  model.h  normal3.h  parser.h  point3.h  ray.h  sphericalgeometry.h  triangle.h  tuple2.h  tuple3.h  tuplelength.h  util.h  vector3.h
engine/src/: canvas.cpp  medium.cpp  model.cpp  normal3.cpp  parser.cpp  point3.cpp  ray.cpp  triangle.cpp  tuple2.cpp  tuple3.cpp  vector3.cpp
tests/: CMakeLists.txt
tests/src/: bounds_tests.cpp  normal_tests.cpp  point_tests.cpp  ray_tests.cpp  spherical_geometry_tests.cpp  test_runner.cpp  test_template.cpp  tests.cpp  util_tests.cpp  vector_tests.cpp
